# cpp-modern-2022-08-23

./: README.md
cpp-modern/: CMakeLists.txt
cpp-modern/_exercise/02_constexpr_if/: constexprif_ex.cpp
cpp-modern/_project-template-vcpkg/: CMakeLists.txt  tests.cpp
cpp-modern/constexpr/: tests.cpp
cpp-modern/custom-literals/: tests.cpp
cpp-modern/fold-expressions/: tests.cpp
cpp-modern/ifs/: tests.cpp
cpp-modern/new-types-std-lib/: tests.cpp
cpp-modern/ranges/: tests.cpp
cpp-modern/small-features/: small_features.cpp  tests.cpp
cpp-modern/structured-bindings/: CMakeLists.txt  tests.cpp
cpp-modern/traits-concepts/: constraints_concepts.cpp  tests.cpp
cpp-modern/type-deduction/: auto_declarations_ex.cpp  ctad.cpp  template-arg-deduction.cpp
